# ChangeLog for app-office/gnucash
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /usr/local/ssd/gentoo-x86/output/app-office/cvs-repo/gentoo-x86/app-office/gnucash/ChangeLog,v 1.4 2002/08/08 03:23:31 leonardop Exp $

*gnucash-1.6.6-r1 (07 Aug 2002)

  07 Aug 2002; L. Boshell <leonardop@gentoo.org> gnucash-1.6.6-r1.ebuild:
  Reworked dependencies. Add support for PostgreSQL.

*gnucash-1.6.6 (28 Mar 2002)

  25 Jul 2002; Daniel Ahlberg <aliz@gentoo.org> gnucash-1.6.6.ebuild :
  Added LICENSE, KEYWORDS, SLOT.

  28 Mar 2002; Seemant Kulleen <seemant@gentoo.org> gnucash-1.6.6.ebuild :

  Version bump

*gnucash-1.6.5-r1 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.