@@ -1,0 +1,1 @@
+MD5 6ae1502593e75248fee43d841edfb8a7 gnucash-1.6.7.tar.gz 16656960
